--- a/angular.json
+++ b/angular.json
@@ -3,17 +3,21 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "brush-editor-start": {
+    "brush-editor-new": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
       "prefix": "app",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "scss"
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/brush-editor-start",
+            "outputPath": "dist/brush-editor-new",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,7 +27,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -57,18 +61,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "brush-editor-start:build"
+            "browserTarget": "brush-editor-new:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "brush-editor-start:build:production"
+              "browserTarget": "brush-editor-new:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "brush-editor-start:build"
+            "browserTarget": "brush-editor-new:build"
           }
         },
         "test": {
@@ -79,7 +83,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": [],
             "assets": [
@@ -102,7 +106,7 @@
         }
       }
     },
-    "brush-editor-start-e2e": {
+    "brush-editor-new-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -111,11 +115,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "brush-editor-start:serve"
+            "devServerTarget": "brush-editor-new:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "brush-editor-start:serve:production"
+              "devServerTarget": "brush-editor-new:serve:production"
             }
           }
         },
@@ -131,5 +135,5 @@
       }
     }
   },
-  "defaultProject": "brush-editor-start"
+  "defaultProject": "brush-editor-new"
 }
