--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@angular/http": "^5.0.0",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.0",
