--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
+    "@angular/cdk": "^7.3.2",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
     "@angular/http": "^5.0.0",
+    "@angular/material": "^7.3.2",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
@@ -24,6 +26,7 @@
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.0",
+    "hammerjs": "^2.0.8",
     "ng2-charts": "^1.6.0",
     "ng2-tooltip-directive": "^2.1.6",
     "ngx-cookie-service": "^2.1.0",
@@ -36,7 +39,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.12.3",
     "@angular/cli": "~7.2.1",
-    "@angular/compiler-cli": "~7.2.0",
+    "@angular/compiler-cli": "^7.2.5",
     "@angular/language-service": "~7.2.0",
     "@types/file-saver": "^2.0.0",
     "@types/jasmine": "~2.8.8",
