--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "ng2-tooltip-directive": "^2.1.6",
     "ngx-cookie-service": "^2.1.0",
     "popper.js": "^1.14.7",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7",
     "rxjs": "^6.3.3",
     "tooltip.js": "^1.3.1",
     "tslib": "^1.9.0",
