--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
+    "crypto-js": "^3.1.9-1",
     "file-saver": "^2.0.0",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^1.6.0",
