--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "crypto-js": "^3.1.9-1",
+    "digest-auth-request": "^0.7.0",
     "file-saver": "^2.0.0",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^1.6.0",
@@ -47,7 +48,7 @@
     "@types/file-saver": "^2.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
