--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~7.2.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "crypto-js": "^3.1.9-1",
     "digest-auth-request": "^0.7.0",
@@ -38,12 +39,13 @@
     "rxjs": "^6.3.3",
     "tooltip.js": "^1.3.1",
     "tslib": "^1.9.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.3",
+    "@angular-devkit/build-angular": "^0.13.7",
     "@angular/cli": "~7.2.1",
-    "@angular/compiler-cli": "^7.2.5",
+    "@angular/compiler-cli": "^7.2.11",
     "@angular/language-service": "~7.2.0",
     "@types/file-saver": "^2.0.0",
     "@types/jasmine": "~2.8.8",
