--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/mathjs": "^5.0.1",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
@@ -29,6 +30,7 @@
     "digest-auth-request": "^0.7.0",
     "file-saver": "^2.0.0",
     "hammerjs": "^2.0.8",
+    "mathjs": "^5.9.0",
     "ng2-charts": "^1.6.0",
     "ng2-tooltip-directive": "^2.1.6",
     "ngx-cookie-service": "^2.1.0",
@@ -41,9 +43,9 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.3",
-    "@angular/cli": "~7.2.1",
-    "@angular/compiler-cli": "^7.2.5",
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "^7.2.13",
     "@angular/language-service": "~7.2.0",
     "@types/file-saver": "^2.0.0",
     "@types/jasmine": "~2.8.8",
