--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/mathjs": "^5.0.1",
         "bootstrap": "^4.3.1",
         "chart.js": "^2.7.3",
+        "classlist.js": "^1.1.20150312",
         "core-js": "^2.5.4",
         "crypto-js": "^3.1.9-1",
         "digest-auth-request": "^0.7.0",
@@ -41,6 +42,7 @@
         "rxjs": "^6.3.3",
         "tooltip.js": "^1.3.1",
         "tslib": "^1.9.0",
+        "web-animations-js": "^2.3.1",
         "zone.js": "~0.8.26"
     },
     "devDependencies": {
